[ appcontroller.go ]: labels, annotations added to resource tree nodes
