# controller/appcontroller.go
@@ -412,7 +412,7 @@ func (ctrl *ApplicationController) getResourceTree(a *appv1.Application, managed
 		}
 
 		if live == nil {
-			nodes = append(nodes, appv1.ResourceNode{
+			newNode := appv1.ResourceNode{
 				ResourceRef: appv1.ResourceRef{
 					Version:   target.GroupVersionKind().Version,
 					Name:      managedResource.Name,
@@ -420,7 +420,16 @@ func (ctrl *ApplicationController) getResourceTree(a *appv1.Application, managed
 					Group:     managedResource.Group,
 					Namespace: managedResource.Namespace,
 				},
-			})
+			}
+
+			if targetLabels := target.GetLabels(); targetLabels != nil {
+				newNode.Labels = targetLabels
+			}
+			if targetAnnotations := target.GetAnnotations(); targetAnnotations != nil {
+				newNode.Annotations = targetAnnotations
+			}
+
+			nodes = append(nodes, newNode)
 		} else {
 			err := ctrl.stateCache.IterateHierarchy(a.Spec.Destination.Server, kube.GetResourceKey(live), func(child appv1.ResourceNode, appName string) bool {
 				if !proj.IsResourcePermitted(schema.GroupKind{Group: child.ResourceRef.Group, Kind: child.ResourceRef.Kind}, child.Namespace, a.Spec.Destination) {
